--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body class='bg-indigo-100'>
   <div class='container h-screen mx-auto text-center'>
 
-    <h1 class='font-bold text-6xl'>MemberDrive</h1>
-    <h2 class='font-light text-3xl'>Embed Test</h2>
+    <h1 class='font-bold text-4xl md:text-6xl'>MemberDrive</h1>
+    <h2 class='font-light text-2xl md:text-3xl'>Embed Test</h2>
 
-    <div style="width: 100%; position: relative;">
+    <div class='relative w-full'>
       <iframe id="MemberDrive" name="MemberDrive" scrolling="no" width="100%" height="1144" frameborder="0" border="no"
-        allowtransparency="true" src="https://memberdrive.ngrok.io/embed/haiti-180.html?embed=true"></iframe>
+        allowtransparency="true" src="https://memberdrive.ngrok.io/embed/haiti180.html?embed=true"></iframe>
       <script>
         window.onmessage = (e) => { if (e.data.hasOwnProperty("frameHeight")) { document.getElementById("MemberDrive").style.height = `${e.data.frameHeight + 30}px`; } };
       </script>
