--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <h2 class='font-light text-2xl md:text-3xl'>Embed Test</h2>
 
     <div class='relative w-full'>
-      <iframe id="MemberDrive" name="MemberDrive" scrolling="no" width="100%" height="1144" frameborder="0" border="no"
-        allowtransparency="true" src="https://memberdrive.org/haitihopefund/replace-the-roof/embed?embed=true"></iframe>
-      <script>
-        window.onmessage = (e) => { if (e.data.hasOwnProperty("frameHeight")) { document.getElementById("MemberDrive").style.height = `${e.data.frameHeight + 30}px`; } };
-      </script>
+
+    <script src="https://memberdrive.ngrok.io/haitihopefund/replace-the-roof/embed.js" async></script>
+    <a href="https://memberdrive.ngrok.io/haitihopefund/replace-the-roof" target="_blank"
+      data-memberdrive-donate="true">Pledge Now</a>
+      
     </div>
   </div>
 </body>
