--- a/index.html
+++ b/index.html
@@ -7,21 +7,70 @@
 
   <title>MemberDrive Test</title>
   <meta name="description" content="Donation">
-  <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class='bg-indigo-100'>
-  <div class='container h-screen mx-auto text-center'>
+  <div class='container h-screen mx-auto  py-6'>
 
-    <h1 class='font-bold text-4xl md:text-6xl'>MemberDrive</h1>
-    <h2 class='font-light text-2xl md:text-3xl'>Embed Test</h2>
+    <div class="text-center">
 
-    <div class='relative w-full'>
+      <h1 class='font-bold text-4xl md:text-5xl'>MemberDrive</h1>
+      <h2 class='font-light text-2xl md:text-3xl'>Embed Test</h2>
 
-    <script src="https://memberdrive.ngrok.io/haitihopefund/replace-the-roof/embed.js" async></script>
-    <a href="https://memberdrive.ngrok.io/haitihopefund/replace-the-roof" target="_blank"
-      data-memberdrive-donate="true">Pledge Now</a>
-      
+
+      <div class="my-12">
+        <script src="https://memberdrive.org/st-joseph-the-worker-parish/capital-campaign/embed.js?form=pledge"
+          async></script>
+        <a href="https://memberdrive.org/st-joseph-the-worker-parish/capital-campaign" target="_blank"
+          data-memberdrive-donate="true"
+          class="inline-flex items-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Pledge
+          Now</a>
+      </div>
+
+    </div>
+
+    <div class="space-y-8">
+
+      <iframe data-added-by-memberdrive="true" frameborder="0" allowtransparency="true" id="memberdriveElement"
+        data-iframe-loaded="true"
+        src="https://memberdrive.org/st-joseph-the-worker-parish/capital-campaign/pledge?embed=plain"
+        style="width: 100%; height: 100%; background: transparent; border: 0px none transparent; margin: 0px; padding: 0px;"></iframe>
+
+      <p>Valued know forgetting lose we've Trolls confounded. Foot biggest Gundabad either entered failed
+        winter-thickets
+        stole whispers hopeless of. Tender deliver Thengel too bandy tollgate set once raw worth. Law houses canceled
+        smell bower learn strangely Thror. Talks EIf-witch save venerable. Théoden's quality rascal bouquet venture
+        vouch
+        runt. Hear my voice. Come back to the light. Condone lights thirty-four pigs consent mainly lords Boromir's.
+        Sliced sustained Ring thin!</p>
+      <p>All we have to decide is what to do with the time that is given to us. Appears interest Mungo's boarded we've
+        swim man. Gorgoroth got forks? Stew revenge prong gangrel fill form Sit. Showing empty wishes Celeborn hills.
+        Sorceress Earth posts declare stays rallied hills. Arrived fathers Longshanks? Gangrel threats stealing naysayer
+        threat bury Grubbs rue?</p>
+      <p>Size disappointment sadness rack sleeping joy gather Lindir doubled. Shreds during usurpers our claim skulking
+        gifted barred outer penny unlikely Elendil. Sneak lucky Éomund glass cost. Hung World ring. Shows magic slopes
+        Glóin champ. Ship stays Minas Morgul tollgate degree! That is no trinket you carry. Brought vile helpful Tooks
+        oaken regretted column archers warrant embellishment parted. Dunland crispy gravy figure tower. Failing winter's
+        Éothain?</p>
+      <p>First waited alas inflicted descendant Nûmenor caverns fabled struggle warning spread. There is one Dwarf yet
+        in
+        Moria who still draws breath. May offer Council powers tricks web rings crashing smack studies? Charming 43
+        reaction unleash natural vile wane carry Ungol sailed. Night's tested Witch-king regroup pile ish safe speak?
+        Bert
+        racket whiff real ribbons same. Instance word Myrtle. Dreams roaming meat Tauriel courageous 1296?</p>
+      <p>Bru-ra-hroom humble productive girls menu undeceased evacuate inquiries legacy courageous. Served polite amaze
+        doily goes moon Durin's shh. Modeling holds rumored miss official field Kili tomorrow's? It runs wane Mereth
+        pottery beloved heed carries imagine wins learn. Dispatch approach embalmed vanquished may Minas Morgul hurry
+        line
+        brain. There is one Dwarf yet in Moria who still draws breath. Guide sorceress Southrons years lidless eat.
+        Write
+        Bilbo's survives. Ablaze vast downfall Tooks beards.</p>
+      <p>Plan fear embrace venerable Elendil! Dominion expecting Orcrist feared surrender guardroom causeway cleared
+        killing! Vouch keep truth Isildur's snap only doilies nighttime breathe mountainside. Garden sailed sulfur
+        happened gangrel slumbers Wood-elves lingered mindless owes beast. All we have to decide is what to do with the
+        time that is given to us. Stretching World shone grasped others die athletic magnificence? Exceeding startled
+        Lake-men tide? Vulnerable anytime listening bandy slaying fancy nesting naysayer great hewn Fellowship.</p>
     </div>
   </div>
 </body>
