Remove inline iframe

--- a/index.html
+++ b/index.html
@@ -20,23 +20,13 @@
 
 
       <div class="my-12">
-        <script src="https://memberdrive.org/st-joseph-the-worker-parish/capital-campaign/embed.js?form=pledge"
-          async></script>
-        <a href="https://memberdrive.org/st-joseph-the-worker-parish/capital-campaign" target="_blank"
-          data-memberdrive-donate="true"
-          class="inline-flex items-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Pledge
-          Now</a>
+        <script src="https://memberdrive.org/st-joseph-the-worker-parish/capital-campaign/embed.js?form=pledge" async></script>
+        <a href="https://memberdrive.org/st-joseph-the-worker-parish/capital-campaign" target="_blank" data-memberdrive-donate="true" class="inline-flex items-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Pledge Now</a>
       </div>
 
     </div>
 
     <div class="space-y-8">
-
-      <iframe data-added-by-memberdrive="true" frameborder="0" allowtransparency="true" id="memberdriveElement"
-        data-iframe-loaded="true"
-        src="https://memberdrive.org/st-joseph-the-worker-parish/capital-campaign/pledge?embed=plain"
-        style="width: 100%; height: 100%; background: transparent; border: 0px none transparent; margin: 0px; padding: 0px;"></iframe>
-
       <p>Valued know forgetting lose we've Trolls confounded. Foot biggest Gundabad either entered failed
         winter-thickets
         stole whispers hopeless of. Tender deliver Thengel too bandy tollgate set once raw worth. Law houses canceled
